assets: prevent sample's details truncation in testing mode
Close #965.

--- a/assets/src/components/base/Accordion/Accordion.css
+++ b/assets/src/components/base/Accordion/Accordion.css
@@ -8,7 +8,7 @@
 }
 
 .accordion--open .accordion__details {
-	max-height: 100vh;
+	max-height: 100%;
 	opacity: 1;
 	transition:
 		max-height 0.5s,
